src/components/App/stylesheet.scss
@import "../../variables";

.App {
  position: fixed;
  display: flex;
  align-items: stretch;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: white;

  .calendar-container {
    flex: 1;
    overflow-y: scroll;
    display: flex;
    justify-content: center;
  }

  .capture-container {
    position: absolute;
    top: 0;
    left: 100vw;
    background-color: white;

    .fake-calendar {
      width: $calendar-width;
    }
  }

  .sidebar {
    background-color: $color-lighter;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    width: 256px;
    border-left: 1px solid $color-dark;

    .header {
      position: relative;
      background-color: $color-light;
      display: flex;
      align-items: center;
      border-bottom: 1px solid $color-dark;

      .primary {
        position: relative;
        flex: 1;
        display: flex;
        align-items: center;
        padding: 0;
        background: none;

        select {
          align-self: stretch;
          flex: 1;
          padding: 8px 24px 8px 8px;
          font-size: 1.2em;
        }

        &:after {
          position: absolute;
          right: 8px;
          content: '▼';
          font-size: 1em;
        }
      }

      .secondary {
        position: absolute;
        right: 24px;
        font-size: .8em;
        color: $color-darker;
      }
    }

    .scroller {
      flex: 1;
      overflow-y: scroll;
      display: flex;
      flex-direction: column;
      align-items: stretch;
    }

    .footer {
      display: flex;
      flex-direction: column;
      align-items: stretch;

      > * {
        border-top: 1px solid $color-dark;
      }
    }
  }

  .sidebar-courses {
    .scroller {
      flex-shrink: 0;
      display: flex;
      flex-direction: column;
      align-items: stretch;

      > * {
        border-bottom: 1px solid $color-dark;
      }

      .course-list {
        display: flex;
        flex-direction: column;
      }
    }
  }

  .sidebar-combinations {
    .header {
      .sorting-option {
        position: relative;
        display: flex;
        align-items: center;
        padding: 0;

        select {
          align-self: stretch;
          flex: 1;
          padding: 8px 32px 8px 8px;
        }

        &:after {
          position: absolute;
          right: 8px;
          content: '▼';
        }
      }
    }

    .scroller {
      margin-bottom: -1px;

      .combination {
        display: flex;
        border-bottom: 1px solid $color-dark;
        height: 100px;
        align-items: stretch;

        .number {
          display: flex;
          align-items: center;
          justify-content: center;
          background-color: $color-dark;
          width: 2.4em;
          color: white;
          font-size: .8em;
          font-weight: bold;
        }

        .calendar-preview {
          flex: 1;
          cursor: pointer;
        }
      }
    }

    .footer {
      position: relative;
    }
  }

  .github-fork-ribbon:before {
    background-color: $color-darker;
  }

  &.mobile {
    flex-direction: column-reverse;

    .tab-container {
      flex-shrink: 0;
      display: flex;
      border-bottom: none;

      .tab {
        flex: 1;
        padding: 16px;
        display: flex;
        justify-content: center;
        align-content: center;
        border-right: 1px solid $color-dark;
        font-weight: bold;
        background-color: $color-lighter;
        color: $color-darker;
        cursor: pointer;
        border-bottom: 1px solid $color-dark;

        &.active {
          background-color: $color-light;
          color: black;
          border-top: 1px solid $color-dark;
          border-bottom: none;
        }

        &:last-child {
          border-right: none;
        }
      }
    }

    .sidebar {
      flex: 1;
      width: auto;
      border-left: none;
    }

    .github-fork-ribbon {
      display: none;
    }
  }
}

